# lotto

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
loterust/: .directory  Cargo.toml  README.md
loterust/src/: duplasena.rs  lotofacil.rs  lotomania.rs  main.rs  megasena.rs  quina.rs  timemania.rs
scripts/: autolotto
src/: lotto.cpp  lotto.hpp  main.cpp
